--- a/first/src/app/homepage/homepage.component.html
+++ b/first/src/app/homepage/homepage.component.html
@@ -25,7 +25,7 @@
     </a>
     <div class="home-tagline">
       <a href="#" class="logo">
-        <span>H</span>ealth<span>P</span>lus.
+        <span>L</span>ife<span>P</span>lus.
       </a>
       <h1>
         <span>Stay</span>
@@ -33,7 +33,6 @@
         <span> Stay</span>
         <span> Healthy</span>
       </h1>
-      <h3>We Care</h3>
       <a href="#">
         <button class="button">Learn More</button>
       </a>
