--- a/first/src/app/patient-section/emergency-casualty/emergency-casualty.component.html
+++ b/first/src/app/patient-section/emergency-casualty/emergency-casualty.component.html
@@ -1,27 +1,27 @@
 <div id="emergency-casualty-main">
-  <div class="card col-sm-3 col-md-6 col-lg-6 col-xl-6">
-    <div class="card-body">
-      <h5 class="card-title">Emergency & Casualty</h5>
-      <p class="card-text" id="emergency-casualty-description">
-        The department is located on Ground Floor of Lifeplus Hospital Building
-        and provides emergency medical services 24 hrs. a day, 7 days a week,
-        manned by qualified team of doctors and para-medical staff with all
-        essential medical facilities. It also has an attached minor operation
-        theatre.
-      </p>
-    </div>
+  <div
+    class="emergency-casualty-description col-sm-6 col-md-6 col-lg-6 col-xl-6"
+  >
+    <h5>Emergency & Casualty</h5>
+    <p id="emergency-casualty-description">
+      The department is located on Ground Floor of Lifeplus Hospital Building
+      and provides emergency medical services 24 hrs. a day, 7 days a week,
+      manned by qualified team of doctors and para-medical staff with all
+      essential medical facilities. It also has an attached minor operation
+      theatre.
+    </p>
   </div>
-    <div class="table-div col-sm-3 col-md-6 col-lg-6 col-xl-6">
-      <table class="table">
-        <thead>
-          <tr>
-            <th scope="col">#</th>
-            <th scope="col">First</th>
-            <th scope="col">Detail</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
+  <div class="table-div col-sm-6 col-md-6 col-lg-6 col-xl-6">
+    <table class="table">
+      <thead>
+        <tr>
+          <th scope="col">#</th>
+          <th scope="col">First</th>
+          <th scope="col">Detail</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
           <th scope="row">1</th>
           <td>Location</td>
           <td>Ground Floor. LC</td>
@@ -39,4 +39,4 @@
       </tbody>
     </table>
   </div>
-  </div>
+</div>
