le lo. pucho mat

--- a/first/src/app/patient-section/emergency-casualty/emergency-casualty.component.css
+++ b/first/src/app/patient-section/emergency-casualty/emergency-casualty.component.css
@@ -1,14 +1,28 @@
+.emergency-casualty-description{
+  display: inline-block;
+}
+
+.emergency-casualty-description p{
+  display: inline-block;
+  text-justify: auto;
+  margin-left: 3vw;
+  text-align: justify;
+}
+
+.emergency-casualty-description h1{
+  font-size: 1.6rem;
+  margin-left: 5%;
+  margin-top: 5%;
+}
 
 .table-div{
-  display: inline;
-  width: 30%;
-  margin-top: 5vh;
+  display: inline-block;
 }
-
-table{
-  margin-top: 2vh;
+.table-div table{
+  display: inline-block;
+  margin-bottom: 40%;
 }
-.emergency-casualty-description{
-  display: inline;
-  width: 70%;
-}
+/* 
+.table-div *{
+  display: inline-block;
+} */
