--- a/first/src/app/patient-section/canteen-service/canteen-service.component.html
+++ b/first/src/app/patient-section/canteen-service/canteen-service.component.html
@@ -1,5 +1,12 @@
-<div class="container">
-   <div class="row min-vh-100 align-items-centre text-centre text-md">
+<div class="canteen-main">
+   <div class="canteen-image-div align-items-centre text-centre col-sm-7 col-md-7 col-lg-7 col-xl-7">
+      <img src="./../../../assets/canteen.png" alt="canteen_img" height="90%"
+      width="90%"/>
       
+   </div>
+   <div class=" canteen-image-sidetext col-sm-4 col-md-4 col-lg-4 col-xl-4">
+      <p>
+         LifePlus hospital also has a well -equipped catering facility for patients, their families, doctors & employees, and also for personal walks. The primary feature of the canteen is to provide anyone who comes in with quality and hygienically protected food.
+      </p>
    </div>
 </div>
