--- a/first/src/app/patient-section/accommodation/accommodation.component.html
+++ b/first/src/app/patient-section/accommodation/accommodation.component.html
@@ -1,1 +1,17 @@
-<p>accommodation works!</p>
+<div class="accommodation-div">
+   <h5>Friendly support in the hour of need</h5>
+   <p>
+      Friendly support in the hour of need
+We are pleased to offer Patient Relative Accommodation within the hospital premises for the relatives of patients undergoing treatment at Lifeplus Hospital, thus making it convenient for those accompanying the patient. Our team aims to ensure that patients' relatives are supported during their stay with us in a safe, clean and friendly environment.
+   </p>
+
+   <h5>Services Offered</h5>
+   <ul class="list-group">
+      <li class="list-group-item">Accommodation within the premises</li>
+      <li class="list-group-item">Centralised Air Conditioning</li>
+      <li class="list-group-item">Attached Bathrooms</li>
+      <li class="list-group-item">Lounge Area</li>
+      <li class="list-group-item">Twin Bed</li>
+    </ul>
+    <h6>We also have an ICU patient waiting lounge with 24 hour cafeteria services.</h6>
+</div>
