--- a/first/src/app/patient-section/canteen-service/canteen-service.component.html
+++ b/first/src/app/patient-section/canteen-service/canteen-service.component.html
@@ -1,11 +1,11 @@
 <div class="canteen-main">
    <div class="canteen-image-div align-items-centre text-centre col-sm-8 col-md-8 col-lg-8 col-xl-8">
       <img src="./../../../assets/canteen.png" alt="canteen_img" height="90%"
-      width="100%"/>
+      width="90%"/>
       
    </div>
-   <div class=" canteen-image-sidetext col-sm-4 col-md-4 col-lg-4 col-xl-4">
-      <p>
+   <div class=" canteen-image-sidetext col-sm-3 col-md-3 col-lg-3 col-xl-3">
+      <p class="card-text">
          LifePlus hospital also has a well -equipped catering facility for patients, their families, doctors & employees, and also for personal walks. The primary feature of the canteen is to provide anyone who comes in with quality and hygienically protected food.
       </p>
    </div>
