--- a/first/src/app/about-us/about-us.component.html
+++ b/first/src/app/about-us/about-us.component.html
@@ -9,8 +9,7 @@
                 a panel of leading doctors in virtually every speciality along with a team of dedicated support
                 staff,the hospital is dedicated to putting its patients at the heart of its everyday operations.
             </p>
-
-            <div class="col-md-4 col-lg-4 col-sm-4 follow">
+            <div class="col-md-4 col-lg-4 col-sm-4 follow text-center">
                 <h4>Follow Us</h4>
                 <a href="#">facebook</a>
                 <a href="#"> linkedin </a>
