--- a/first/src/app/about-us/about-us.component.css
+++ b/first/src/app/about-us/about-us.component.css
@@ -3,18 +3,10 @@
     width: 100%;
 }
 .follow{
-    
+    margin-left: 35%;
     color: black;
     font-weight: bold;
     padding-top: 30%;
     text-align: center;
 
-}
-@media screen and (max-width:100%){
-    .follow a 
-    {
-        padding:0% 2% 0% 2%;
-
-    }
-    
 }
