changes in contact us and book appointment

--- a/first/src/app/cardiology/cardiology.component.css
+++ b/first/src/app/cardiology/cardiology.component.css
@@ -5,7 +5,8 @@
    text-align: center;
 }
 button{
-   background-color: blue;
+   background-color: rgb(19, 122, 187);
+   color: white;
 }
 .Cardiology{
    background-color: aliceblue;
