--- a/first/src/app/dentistry/dentistry.component.css
+++ b/first/src/app/dentistry/dentistry.component.css
@@ -5,8 +5,9 @@
 .appointment-link{
     text-align: center;
  }
-button{
-    background-color: blue;
+ button{
+    background-color: rgb(19, 122, 187);
+    color: white;
  }
  .main{
     height: 100vh;
