--- a/first/src/app/book-appointment/book-appointment.component.html
+++ b/first/src/app/book-appointment/book-appointment.component.html
@@ -5,8 +5,8 @@
             <h3>Patient details</h3>
             <div class="form-group">
                 <label for="firstname" class="form-label">FirstName</label>
-                <input type="text" class="form-control" placeholder="Name" id="firstname" name="firstname"
-                    formControlName="firstname" ngModel required />
+                <input type="text" class="form-control" placeholder="Name"
+                    formControlName="firstname" />
                 <span class="error-msg" *ngIf="
                     book_appointment.get('firstname')?.errors &&
                     book_appointment.get('firstname')?.touched
@@ -15,8 +15,8 @@
             </div>
             <div class="form-group">
                 <label for="lastname" class="form-label">LastName</label>
-                <input type="text" class="form-control" placeholder="Surname" id="lastname" name="lastname"
-                    formControlName="lastname" ngModel required />
+                <input type="text" class="form-control" placeholder="Surname"
+                    formControlName="lastname"  />
                 <span class="error-msg" *ngIf="
                     book_appointment.get('lastname')?.errors && book_appointment.get('lastname')?.touched
                   ">This is required</span>
@@ -24,31 +24,31 @@
 
             <div>
                 <label for="phone_no">Phone_no</label><br>
-                <input type="tel" formControlName="phone_no"  id="phone_no" name="phone_no" placeholder="123-45-67890" pattern="[0-9]{3}-[0-9]{2}-[0-9]{5}" required>
+                <input type="tel" formControlName="phone_no"  placeholder="123-45-67890" minlength="10" maxlength="10">
                 
                 <span class="error-msg" *ngIf="
                     book_appointment.get('phone_no')?.errors && book_appointment.get('phone_no')?.touched
-                  ">This is required</span>
+                  ">This is required and please enter valid number</span>
             </div>
             <br>
             <div class="form-group">
                 <label for="email" class="form-label">Email address </label>
-                <input type="email" class="form-control" placeholder="eg. abc@gmail.com" id="email" name="email"
-                    aria-describedby="emailHelp" required formControlName="email" ngModel required />
+                <input type="email" class="form-control" placeholder="eg. abc@gmail.com" 
+                    aria-describedby="emailHelp" required formControlName="email" />
                 <span class="error-msg" *ngIf="book_appointment.get('email')?.errors && book_appointment.get('email')?.touched">This is required
                     </span>
             </div>
             <div class="form-group">
                 <label for="age" class="form-label">Age</label>
-                <input type="text" class="form-control" placeholder="enter your age" id="age" name="age"
-                    formControlName="age" ngModel required />
+                <input type="text" class="form-control" placeholder="enter your age" 
+                    formControlName="age" />
                 <span class="error-msg" *ngIf="book_appointment.get('age')?.errors && book_appointment.get('age')?.touched">This is required
                     </span>
             </div>
             <div class="form-group">
                 <label for="gender" class="form-label">Gender</label>
                 <div class="form-group">
-                    <select id="gender" name="gender" formControlName="gender">
+                    <select formControlName="gender">
                         <option value="male">Male</option>
                         <option value="female">Female</option>
                     </select>
@@ -60,8 +60,8 @@
 
             <div class="form-group">
                 <label for="medical_complaint" class="form-label">Medical_complaint:</label>
-                <textarea class="form-control" rows="2" id="medical_complaint" name="medical_complaint"
-                    formControlName="medical_complaint" ngModel required>
+                <textarea class="form-control" rows="2"
+                    formControlName="medical_complaint" >
                 </textarea>
                 <span class="error-msg" *ngIf="
                     book_appointment.get('medical_complaint')?.errors && book_appointment.get('medical_complaint')?.touched
@@ -70,7 +70,7 @@
 
             <div class="form-group">
                 <label for="selected_date">Selected_date: </label>
-                <input type="date" formControlName="selected_date" id="selected_date" name="selected_date">
+                <input type="date" formControlName="selected_date">
                 
                 <span class="error-msg" *ngIf="
                 book_appointment.get('selected_date')?.errors && book_appointment.get('selected_date')?.touched
@@ -78,7 +78,7 @@
             </div>
             <div>
             <label for="selected_slot">Selected_slot: </label>
-            <input type="time" id="selected_slot" name="selected_slot" formControlName="selected_slot">
+            <input type="time" formControlName="selected_slot">
             <span class="error-msg" *ngIf="
                 book_appointment.get('selected_slot')?.errors && book_appointment.get('selected_slot')?.touched
               ">This is required</span>
@@ -87,7 +87,7 @@
             <div class="form-group">
                 <label for="visiting_status" class="form-label">Visiting_status</label>
                 <div class="form-group">
-                    <select id="visiting_status" name="visiting_status" formControlName="visiting_status">
+                    <select formControlName="visiting_status">
                         <option value="visited before">Visited before</option>
                         <option value="visiting for the first time">Visiting for the first time</option>
                     </select>
