--- a/first/src/app/contact-us/contact-us.component.css
+++ b/first/src/app/contact-us/contact-us.component.css
@@ -11,10 +11,11 @@
     padding: 0% 2% 1% 2%;
     margin: 1% 30% 5% 30%;
 }
-.error-msg
+span
 {
     color: red;
 }
+
 
 @media screen and (max-width:600px) {
     .contact-us
