--- a/first/src/app/contact-us/contact-us.component.html
+++ b/first/src/app/contact-us/contact-us.component.html
@@ -1,48 +1,36 @@
 <section class="contact-us">
-  <div class="login col-lg-4 m-auto" shadow-lg>
-      <form [formGroup]="contact" #userpost="ngForm" (ngSubmit)="onSubmit(userpost.value)">
-          <h2>Contact Us</h2>
-          <div class="form-group">
-              <label for="firstname" class="form-label">FirstName</label>
-              <input type="text" class="form-control" placeholder="Name" id="firstname" name="firstname"
-                  formControlName="firstname" ngModel required />
-              <span class="error-msg" *ngIf="
-          contact.get('firstname')?.errors &&
-          contact.get('firstname')?.touched
-        ">This is required
-              </span>
-          </div>
-          <div class="form-group">
-              <label for="lastname" class="form-label">LastName</label>
-              <input type="text" class="form-control" placeholder="Surname" id="lastname" name="lastname"
-                  formControlName="lastname" ngModel required />
-              <span class="error-msg" *ngIf="
-          contact.get('lastname')?.errors && contact.get('lastname')?.touched
-        ">This is required</span>
-          </div>
-          <div class="form-group">
-              <label for="email" class="form-label">Email address </label>
-              <input type="email" class="form-control" placeholder="eg. abc@gmail.com" id="email" name="email"
-                  aria-describedby="emailHelp" required formControlName="email" ngModel required />
-              <span class="error-msg" *ngIf="contact.get('email')?.errors && contact.get('email')?.touched">This is
-                  required
-              </span>
-          </div>
-          <div class="form-group">
-              <label for="comment" class="form-label">Comment:</label>
-              <textarea class="form-control" rows="2" id="comment" name="comment" formControlName="comment" ngModel
-                  required>
-      </textarea>
-              <span class="error-msg" *ngIf="
-          contact.get('comment')?.errors && contact.get('comment')?.touched
-        ">This is required
-              </span>
-          </div>
-          <button type="submit" class="btn btn-primary col-lg-12">
-              Submit
-          </button>
-      </form>
-     
-  </div>
-</section>
+    <div class="login col-lg-4 m-auto" shadow-lg>
+        <h2>Contact Us</h2>
+        <form #contact="ngForm" (ngSubmit)="onSubmit(contact.value)">
 
+            <div class="form-group">
+                <label for="firstname" class="form-label">FirstName</label>
+                <input type="text" required #name="ngModel" pattern="[a-zA-Z]+$" class="form-control" placeholder="Name" name="firstname" ngModel  />
+            <span *ngIf="name.invalid && name.touched">This is required</span>
+        </div>
+
+            <div class="form-group">
+                <label for="lastname" class="form-label">LastName</label>
+                <input type="text" required #surname="ngModel" pattern="[a-zA-Z]+$" class="form-control" placeholder="Surname" name="lastname" ngModel  />
+                <span *ngIf="surname.invalid && surname.touched">This is required</span>
+            </div>
+            <div class="form-group">
+                <label for="email" class="form-label">Email address </label>
+                <input type="email" required #email="ngModel" class="form-control" placeholder="eg. abc@gmail.com" name="email" ngModel
+                    required />
+                <span *ngIf="email.invalid && email.touched">This is required</span>
+            </div>
+            <div class="form-group">
+                <label for="comment" class="form-label">Comment:</label>
+                <textarea #comment="ngModel" class="form-control" rows="2" name="comment" ngModel required>
+                 </textarea>
+                 <span *ngIf="comment.invalid && comment.touched">This is required</span>
+            </div>
+
+            <button [disabled]="contact.invalid" class="btn btn-primary col-lg-12">
+                Submit
+            </button>
+
+        </form>
+    </div>
+</section>
