--- a/first/src/app/oncology/oncology.component.css
+++ b/first/src/app/oncology/oncology.component.css
@@ -6,7 +6,8 @@
    text-align: center;
 }
 button{
-   background-color: blue;
+   background-color: rgb(19, 122, 187);
+   color: white;
 }
 .main{
    height: 100vh;
