--- a/first/src/app/orthopaedics/orthopaedics.component.css
+++ b/first/src/app/orthopaedics/orthopaedics.component.css
@@ -6,8 +6,9 @@
     text-align: center;
  }
  button{
-    background-color: blue;
- }
+   background-color: rgb(19, 122, 187);
+   color: white;
+}
  .main{
     height: 100vh;
  }
